properties profiles management key and pom .jar package

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,3 @@
-spring.application.name=backend
+spring.profiles.active=local
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/carex_db
-spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=dcaioribeiro98@gmail.com
-spring.mail.password=bzgu ofik jgjn bwzd
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.open-in-view=true
