--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/carex_db
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
