--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:postgresql://prod_carex_db_user:swaHoOHrP26u3BnEbh1D5c0Jqtw7EvDh@dpg-ct2vkkpu0jms7391d720-a.oregon-postgres.render.com/prod_carex_db
+spring.datasource.url=jdbc:postgresql://dpg-ct2vkkpu0jms7391d720-a:5432/prod_carex_db
 spring.datasource.username=prod_carex_db_user
 spring.datasource.password=swaHoOHrP26u3BnEbh1D5c0Jqtw7EvDh
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
