--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -14,3 +14,5 @@ spring.mail.username=dcaioribeiro98@gmail.com
 spring.mail.password=bzgu ofik jgjn bwzd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
