database credentials update

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:postgresql://dpg-ct7309tds78s73bc7fj0-a:5432/carex_db
-spring.datasource.username=carex_db_user
-spring.datasource.password=P7gEJoxfAADO6nojJULbqEzgGR1GeWGV
+spring.datasource.url=jdbc:postgresql://dpg-cup89m8gph6c73dt7csg-a:5432/horafisiodb
+spring.datasource.username=horafisiodb_user
+spring.datasource.password=k8xTIBTATShCgG3lipAGI65j1bw7nGH2
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
