new database connection strings defined

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:postgresql://dpg-cup89m8gph6c73dt7csg-a:5432/horafisiodb
-spring.datasource.username=horafisiodb_user
-spring.datasource.password=k8xTIBTATShCgG3lipAGI65j1bw7nGH2
+spring.datasource.url=jdbc:postgresql://postgres98.cv6ym6aco6qh.us-east-1.rds.amazonaws.com/hora_fisio
+spring.datasource.username=crdev98
+spring.datasource.password=postGri5397!
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -14,5 +14,3 @@ spring.mail.username=dcaioribeiro98@gmail.com
 spring.mail.password=bzgu ofik jgjn bwzd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
