changes in production database connection and

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:postgresql://postgres98.cv6ym6aco6qh.us-east-1.rds.amazonaws.com/hora_fisio
-spring.datasource.username=crdev98
-spring.datasource.password=postGri5397!
+spring.datasource.url=jdbc:postgresql://hfisio-db.cv6ym6aco6qh.us-east-1.rds.amazonaws.com/hfisiodb
+spring.datasource.username=postgres
+spring.datasource.password=hFis0103!
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
