--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,11 +15,10 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  install:
     runs-on: ubuntu-latest
-
     steps:
+    - name: Checkout code from Github
     - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -30,6 +29,18 @@ jobs:
 
     - name: Dependencies install
       run: mvn clean install
-    
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code from Github
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
